<resources>
    <string name="app_name">NoteApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noteAppName">My Note</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="categories">Categories</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search...</string>
</resources>